[package]
name = "ppm-compiler"
version = "0.1.0"
authors = ["Uzair Fasih <uzair.fassi@gmail.com>"]
description = "A teeny tiny PPM compiler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
serde_json = "1.0.114"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window", "console", "HtmlInputElement", "FileReader", "File", "FileList", "Document", "Event", "MouseEvent"] }
